[package]
name = "ropr"
version = "0.2.27"
authors = ["Ben Lichtman"]
edition = "2024"
description = "A blazing fast multithreaded ROP Gadget finder. ropper / ropgadget alternative"
repository = "https://github.com/Ben-Lichtman/ropr"
license = "MIT OR Apache-2.0"

[dependencies]
clap = { version = "4.6", features = ["derive"] }
colored = "3.1"
goblin = "0.10"
iced-x86 = "1.21"
rayon = "1.12"
regex = "1.12"
rustc-hash = "2.1"
thiserror = "2.0"
